# libslater

./: CMakeLists.txt  MERGE-CHECKLIST.md  README.md  libslater.h
examples/: simple.cpp  simple2.cpp  simple3.cpp  simple_eri.cpp  simple_kinetic.cpp  test-sph-harm.cpp  test3c.cpp  test4c.cpp
include/: analytical-3c.h  bfunctions.h  coordinates.h  eri_sdbar.h  gaunt.h  homeier.h  integrators.h  logger.h  nested_summation.h  nested_summation_debug.h  safouhi-4c.h  semi-infinite-integral.h  slater-utils.h
precalculate/: gaunt-table.cpp  gaunt-table.cpp.in  gaunt-table.h  gaunt-table.h.in  precalc-gaunt.py  test-gaunt-table.cpp
src/: analytical-3c.cpp  basis_functions.cpp  basis_set.cpp  bfunctions.cpp  engine.cpp  eri_sdbar.cpp  gaunt.cpp  homeier.cpp  libslater.cpp  logger.cpp  nested_summation.cpp  parameters.cpp  safouhi-4c.cpp  semi-infinite-3c.cpp  utils.cpp
src/fortran-4c/: DFj42.c  DG.c  DX.c  Dbsj.c  Dtk.c  FSCj.c  Fj42.c  GREP-WD42.c  GaussLag.c  GaussLeg.c  HFa42.c  HFj42.c  LU.c  bessel_reduite.c  binom.c  calf42.c  cartco.c  cnp.c  coeffbons.c  constlmp.c  dfactorial.c  dobin.c  fa42.c  factorial.c  g.c  gaunt.c  gaunt1.c  harmonique.c  hatk.c  legendre.c  main.c  miscfunc.c  msphj.c  power_x.c  racdi.c  sdbar42_lrzv.c  sinf42.c  vcoord.c  vharmonique.c  zero_bsj.c
test/: CMakeLists.txt  homeier-test-data.h  test-api.cpp  test-bfunctions.cpp  test-four-center.cpp  test-homeier-overlap.cpp  test-kinetic.cpp  test-math.cpp  test-sums.cpp  test-three-center.cpp  three-c-tests-data.cc  three-c-tests.h
